--- a/source/_posts/2023-04-30.md
+++ b/source/_posts/2023-04-30.md
@@ -1,11 +1,9 @@
 ---
-password: 0816
-abstract: 这是一篇加密博文，请输入密码后查看
-message: 这里需要密码才能访问。
-wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
-title: 2023-04-30
+password: hello
+title: 日记20230430
 date: 2023-04-30 16:32:40
 tags: 日记
 ---
 
 test
+rteyergyergdeyryhge
