add things to post 20230430

--- a/source/_posts/2023-04-30.md
+++ b/source/_posts/2023-04-30.md
@@ -5,5 +5,9 @@ date: 2023-04-30 16:32:40
 tags: 日记
 ---
 
-test
-rteyergyergdeyryhge
+2023年4月30日 癸卯年三月十一 天气阴 心情down
+
+I really wish I could change. I been at my low for too long. 
+I know the reason I be like this is because I didn't treat myself seriously, I just live with habit, follow people.
+孔子曰：吾日三省吾身。这是对的，但光反省是远远不够的，重要的是认识到自己的错误后能够改正。
+大部分人懂得这个道理，但有的人选择接受自己犯下的错误，不再去感受那些愧疚感，继续重复自己做过的事。
